Renaming provenance card => workflow card
